# hamrah-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LOCAL_HTTPS_SETUP.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  QWIK_HELPERS.md  README.md  SERVER_INTEGRATION.md  WEBAUTHN_ENDPOINTS.md  agents.md  package-lock.json  package.json  tsconfig.json  wrangler.preview.toml  wrangler.toml
.claude/agents/: cloudflare-rust-expert.md  rust-pro.md
.github/: DEPLOYMENT.md
.github/workflows/: cleanup-preview.yml  cloud-run.yml  deploy.yml  neon-pr-branch.yml
.sqlx/: query-1c3ec1666f66944a9029775e7efe384cf04c7c7f102b4992df87aef650904332.json  query-30904a07670e5f4470da6552581246c52d1d3518b58cf81755b7d9549042427e.json  query-34cdb047e42507c404c2889f677bc8e8b1f14794389617e0f97d42cb35d74d7a.json  query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json  query-42c8ec91586f00887688628722d489409f369ee1ddbd6c96b7c09c1b7fc4f01d.json  query-45a0b05973eacfd489f6df316463c8684e0a95be122b342a4723fae93ddfd01d.json  query-6a98eca49d24eda637402c47ed854810e0070d95574babe0c7cc9260776d4739.json  query-73ffdf5be39aa5c4c160c2f77d6634a6970eeb4e1d3395f045ded747f0ce9d2a.json  query-74859e5d5b8de83706f5944773fa3933f7e04e0fe0c2467a46762dcc07db24eb.json  query-7651de8b72c20d8ca3b14a8c3983ad468c44b9e86a1bf5c6251db97e7b6a1ec4.json  query-796efb4b5518c5101e48d1aa31dd4818c01ecb524eb9190444f5a54c853b182b.json  query-8890931c0d83ec73c77a89604530dd221c04d8234c559e9d811c154b236e4639.json  query-9abd4dde1800d352932b34dee84196afbfe3faecd22fab85338c9d547fe0064c.json  query-a4821a27a4f2a9662ba6234e4ab77093378c0235e7dc51960e0315ae94766d15.json  query-b47b641c0a68899c4d261e214d3bba7a00670a9f3f56271ae409bee358be0ccb.json  query-bd31f66d5f3aa394e90b84cd9f560e2c25ee42657d4702cfb61c8d19842a7a78.json  query-c9b311938a278b1c6f7dc570f0ae97c9a3bf331bdd1d05d47e1e54a53750ce46.json  query-cb93eec0ffcbc98d10d9c1c1155b4787f669436ddd640d0bd2f33d8362775ca5.json  query-cd64b17e81ed0a6b5c7556a0b70fc700e12fdbe6977be5cb67b7a56ee797cc1a.json  query-d1feec9ac15ddec43288ac56205b45a934d1cdb1dc264cc983cf6ce65c44ac9e.json  query-d29e50c88c50aff84848dcdc9f3bf31f2aeb9165486bebf59e72818da8e1e83b.json  query-dfc7bd34e0a7be175626b92b42d313fb2e3074c1b5e382361e903629285a88a2.json  query-e05a6dc64ea49d155e4296a08e570f97626fa2b089cea52cc5f3691bbe006687.json  query-e20f59ad092b9ff3e2bc67513fb0b71211735ec2b12ce8b380108abf76030d6f.json  query-e450b4823686a19e1d1e0309582679b17643fca7ad8c1298730be4795e2c1e4a.json  query-f05a1357f65a8efe84c86297d52e13f6ab3ec476b1810751b9c4a3b5c31ea0b0.json  query-f24451dd8c864a20d39da9da2ed31fd5db282d42924e776ec89fa49c7863b31e.json
migrations/: 20250101000000_initial_schema.sql  20250101000001_links_and_tags.sql  20250101000002_app_attestation.sql  20250101000003_webauthn.sql
scripts/: README_TOKEN_TOOL.md  token_tool.rs
shared/database/: 0001_initial.sql  0002_links_pipeline.sql  0003_app_attest_counter.sql
src/: attestation.rs  auth.rs  db.rs  lib.rs  links.rs  main.rs  routes.rs  summaries.rs  tags.rs  users.rs  utils.rs  webauthn.rs
src/auth/: app_attestation.rs  cookies.rs  mod.rs  session.rs  tokens.rs
src/db/: migrations.rs  mod.rs  schema.rs
src/handlers/: auth.rs  internal.rs  mod.rs  users.rs  webauthn.rs  webauthn_data.rs
tests/: webauthn_data_tests.rs
workers/api/: Cargo.toml  debug_test.rs  wrangler.preview.toml  wrangler.toml
workers/api/src/: error.rs  lib.rs  pipeline_shim.rs  shared_handles.rs  single_thread_executor.rs  utils.rs
workers/link-pipeline/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
(+29 files in other folders)
