[package]
name = "hamrah-api"
version = "0.1.0"
edition = "2021"
authors = ["Mike Hamrah <m@hamrah.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = [
    "json",
    "http1",
    "query",
    "matched-path",
] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Moved uuid to target-specific sections to control randomness features
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base32 = "0.5"
hex = "0.4"
# Moved rand to target-specific sections to control getrandom features
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "1.0"
# SQLx is only needed for non-WASM targets (development/testing)
# Production WASM builds use sqlx-d1 directly
# All dependencies now WASM-compatible
rand = { version = "0.8", features = ["getrandom"], default-features = false }
getrandom = { version = "0.2.16", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
sqlx = { version = "0.8", features = ["derive", "macros"], default-features = false }
sqlx-d1 = { version = "0.2.0", features = ["macros"] }
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "derive", "macros"] }
