[package]
name = "hamrah-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono"] }
dotenvy = "0.15"
# Misc
anyhow = "1"
thiserror = "1"
num_cpus = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
