[package]
name = "hamrah-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono"] }
dotenvy = "0.15"
# Auth & Security
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
# Apple App Attestation
appattest-rs = "0.1.0"
# Misc
anyhow = "1"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
